NTI-4804 Prevent notice text from overlapping its container

--- a/src/components/Notice.scss
+++ b/src/components/Notice.scss
@@ -8,6 +8,9 @@
 	color: $secondary-grey;
 	border: 1px solid $border-grey;
 	border-radius: 2px;
+	word-break: break-word;
+	word-wrap: break-word;
+
 	&.small {
 		font-size: .6875rem;
 		padding: .25rem;
